[package]
name = "rust-common-tests"
version = "0.1.0"
edition = "2024"

[package.metadata]
install_dir = "#no installation directory required for libraries"
rust_service_path = "../rust-service"

[lints.rust]
non_snake_case = "allow"

[lib]
name = "rust_common_tests"
path = "src/lib.rs"

[dependencies]
walkdir = "2.0"
regex = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
thiserror = "1.0"
log = "0.4"

[[test]]
name = "integration_rust_common_tests"
path = "tests/integration_rust_common_tests.rs"

[[test]]
name = "security_checks_rust_common_tests"
path = "tests/security_checks_rust_common_tests.rs"

[[test]]
name = "unit_tests_rust_common_tests"
path = "tests/unit_tests_rust_common_tests.rs"
